2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Factor out a command to display priority.

2009-11-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/model/couch.py:
	  Set always, even if a field is not present, so edit can clear them.

2009-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Fix display of end of thing, was showing due before.
	* python/things/command/main.py:
	  Pass command to lookup so it can write to stdout/stderr.

2009-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/model/couch.py:
	  Also handle self.urgency not being set.
	* python/things/command/list.py:
	  Add list priority/pri to list open things by priority.
	* couchdb/views/open-things-by-priority (added):
	* couchdb/views/open-things-by-priority/map.js (added):
	  Add a view for priority, reimplementing yagtd's priority estimation
	  algorithm in Javascript.

2009-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Since we can't parse times like 4W2D correctly, only print times
	  in one unit, picking the biggest one that doesn't give a remainder.

2009-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/list.py:
	  Add l alias for list.
	* python/things/command/thing.py:
	  Allow entering due date with D: instead of tracebacking.
	* python/things/command/main.py:
	  Use self.stdout
	  Fix done for recurring tasks.

2009-11-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/common/parse.py:
	  extract a parse_date so we can use it in two places.
	* couchdb/views/open-things-due (added):
	* couchdb/views/open-things-due/map.js (added):
	  Add a view to support list due/overdue/today
	* python/things/command/thing.py (added):
	  Add a thing subcommand, and thing due to change the due date.